--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'DANSIS'
+
+future: true
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
   mobile_height: "32px"
   mobile_width: "32px"
   desktop: "images/logo/logo.svg"
-  desktop_height: "32px"
-  desktop_width: "120px"
+  desktop_height: "200px"
+  desktop_width: "300px"
 
 home: 
   limit_services: 6
@@ -17,7 +19,7 @@ collections:
   services:
     output: true
     sort_by: weight
-  team:
+  seminar:
     output: true
 
 defaults:
@@ -28,9 +30,9 @@ defaults:
       layout: "service"
   - scope:
       path: ""
-      type: "team"
+      type: "seminar"
     values:
-      layout: "team"
+      layout: "seminar"
 
 sass:
   style: compressed # possible values: nested expanded compact compressed
