--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,2 +1,2 @@
 google_analytics_id: ""  
-copyright_text: 'Created by <a href="https://www.haervig.com">Jakob Hærvig</a>'
+copyright_text: 'Code and design by <a href="https://www.haervig.com">Jakob Hærvig</a>'
