--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,2 +1,2 @@
 google_analytics_id: ""  
-copyright_text: 'Hosted on <a href="https://github.com/jakobhaervig/dansis">GitHub</a>'
+copyright_text: 'Designed and coded with Jekyll by Jakob Hærvig</a>'
