--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,2 +1,2 @@
 google_analytics_id: ""  
-copyright_text: 'Designed and coded with Jekyll by Jakob Hærvig'
+copyright_text: 'Designed and coded with Jekyll and Markdown by Jakob Hærvig'
